Move to rpm/trunk/org.eclipse.linuxtools.rpm.ui.editor